--- a/bare_metal/link_script_4.7
+++ b/bare_metal/link_script_4.7
@@ -6,19 +6,16 @@ OUTPUT_ARCH(arm)
 SEARCH_DIR("=/usr/local/lib/arm-linux-gnueabihf"); SEARCH_DIR("=/usr/local/lib"); SEARCH_DIR("=/lib/arm-linux-gnueabihf"); SEARCH_DIR("=/lib"); SEARCH_DIR("=/usr/lib/arm-linux-gnueabihf"); SEARCH_DIR("=/usr/lib"); SEARCH_DIR("/usr/arm-linux-gnueabihf/lib");
 SECTIONS
 {
-	. = 0x82000040;
-	  /*. = 0x00010000;*/
+	. = 0xf0010000;
 	.entry : {
 	*(.entry)
 	}
-	. = 0x82001040;
-	/*  . = 0x00011040;*/
+	  . = 0xf001c000;
 	.trampoline : {
 	*(.trampoline)
 	}
   /* Read-only sections, merged into text segment: */
-  PROVIDE (__executable_start = SEGMENT_START("text-segment", 0x82020040)); . = SEGMENT_START("text-segment", 0x82020040) + SIZEOF_HEADERS;
-  /*  PROVIDE (__executable_start = SEGMENT_START("text-segment", 0x00020040)); . = SEGMENT_START("text-segment", 0x00020040) + SIZEOF_HEADERS;*/
+  PROVIDE (__executable_start = SEGMENT_START("text-segment", 0xf001d000)); . = SEGMENT_START("text-segment", 0xf001d000) + SIZEOF_HEADERS;
   .interp         : { *(.interp) }
   .note.gnu.build-id : { *(.note.gnu.build-id) }
   .hash           : { *(.hash) }
