--- a/bare_metal/link_script_4.7
+++ b/bare_metal/link_script_4.7
@@ -1,13 +1,15 @@
 OUTPUT_FORMAT("elf32-littlearm")
-phys = 0xf000d000;
+/*qemu_offset = 0x0000c000;*/
+qemu_offset = 0;
+phys = 0xf000d000 + qemu_offset;
 SECTIONS
 {
-	. = 0xf0000040;
+	. = 0xf0000040 + qemu_offset;
 	.entry : {
 	. = ALIGN(4);
 	*(.entry)
 	}
-	  . = 0xf000c000;
+	  . = 0xf000c000 + qemu_offset;
 	.trampoline : {
 	*(.trampoline)
 	}
