working sys sched

--- a/bare_metal/link_script_4.7
+++ b/bare_metal/link_script_4.7
@@ -1,6 +1,6 @@
 OUTPUT_FORMAT("elf32-littlearm")
-/*qemu_offset = 0x0000c000;*/
-qemu_offset = 0;
+qemu_offset = 0x0000c000;
+/*qemu_offset = 0;*/
 phys = 0xf000d000 + qemu_offset;
 SECTIONS
 {
